# serializer version: 1
# name: test_fetch_exchange
  list([
    dict({
      'datetime': datetime.datetime(2023, 9, 13, 12, 29, 40, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      'netFlow': -15.4,
      'sortedZoneKeys': 'DK-BHM->SE-SE4',
      'source': 'bornholm.powerlab.dk',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_fetch_production
  list([
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2023, 9, 13, 12, 29, 40, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      'production': dict({
        'biomass': 1.2,
        'solar': 3.6,
        'wind': 8.2,
      }),
      'source': 'bornholm.powerlab.dk',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'DK-BHM',
    }),
  ])
# ---
